# my-python-template

./: .commit_template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: clean_gitkeep.yml  lint.yml
docs/reports/: memo.tex
src/: main.py
src/config/: settings.yaml
src/config/model/: proposal.yaml
src/module/: base_model.py
src/utils/: __init__.py  grid_search.py  io_helper.py  metrics.py  preprocessor.py
tests/: test_cuda.py
