[project]
name = "my-python-template"
version = "0.2.0"
description = "A template for Python projects with pre-configured tools and dependencies."
authors = [
    {name = "naoki", email = "u429561d@ecs.osaka-u.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy (==1.26.4)",
  "seaborn (>=0.13.2,<0.14.0)",
  "notebook (>=7.4.5,<8.0.0)",
  "pandas (>=2.3.2,<3.0.0)",
  "scikit-learn (<1.7.2)",
  "tqdm (>=4.67.1,<5.0.0)",
  "tabulate (>=0.9.0,<0.10.0)",
  "mlflow (==2.8.1)",
  "hydra-core (>=1.3.2,<2.0.0)",
  "torch (==1.13.1)",
  "torchvision (==0.14.1)",
  "torchaudio (==0.13.1)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[tool.ruff]
target-version = "py39"
line-length = 119
ignore = ["E741"]

[tool.ruff.lint]
select = ["E", "W", "F", "C"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.sphinx-pyproject]
project = "my-python-template"
copyright = "2023, naoki"
language = "en"
package_root = "my-python-template"
html_theme = "sphinx_rtd_theme"
todo_include_todos = true
templates_path = ["_templates"]
html_static_path = ["_static"]
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.viewcode",
  "sphinx.ext.todo",
  "sphinx.ext.napoleon",
]
