[project]
name = "my-python-template"
version = "0.3.0"
description = "A template for Python projects with pre-configured tools and dependencies."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.2",
    "notebook>=7.5.3",
    "numba>=0.60.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[tool.ruff]
target-version = "py39"
line-length = 119
ignore = ["E741"]

[tool.ruff.lint]
select = ["E", "W", "F", "C"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.sphinx-pyproject]
project = "my-python-template"
copyright = "2026, naoki"
language = "en"
package_root = "my-python-template"
html_theme = "sphinx_rtd_theme"
todo_include_todos = true
templates_path = ["_templates"]
html_static_path = ["_static"]
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.viewcode",
  "sphinx.ext.todo",
  "sphinx.ext.napoleon",
]
